--- a/Windows-Base/bootstrap-scripts/packages.config
+++ b/Windows-Base/bootstrap-scripts/packages.config
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <packages>
     <package id="microsoft-edge" version="88.0.705.63" />
-    <package id="jdk8" version="8.0.211" />
+    <package id="javaruntime" version="8.0.231"/>
 </packages>
